--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
 		<div class="box_inner">
 			<a class="closer" href="#"><span></span></a>
 			<div class="modal_content">
-
 				<div class="modal_in">
 					<!-- Content comes from JS -->
 				</div>
-
 				<div class="fn__nav" data-from="" data-index="">
 					<a href="#" class="prev">
 						<span class="text">Prev</span>
@@ -46,41 +44,32 @@
 		</div>
 	</div>
 	<!-- /MODALBOX -->
-
 	<div class="resumo_fn_content">
-
 		<!-- Main Left Part -->
 		<div class="resumo_fn_left">
-
 			<!-- Page -->
 			<div class="resumo_fn_page">
-
-
 				<!-- Home Section -->
 				<section id="home">
 					<div class="container">
 						<div class="roww">
-
 							<!-- Main Title -->
 							<div class="resumo_fn_main_title">
 								<h3 class="subtitle">Introduction</h3>
-								<h3 class="title">UI/UX Designer</h3>
+								<h3 class="title">Computer Engineer</h3>
 								<p class="desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern websites, web services and online stores.</p>
 								<img src="img/signature.png" alt="">
 							</div>
 							<!-- /Main Title -->
-
 						</div>
 					</div>
 				</section>
 				<!-- /Home Section -->
 
-
 				<!-- About Section -->
 				<section id="about">
 					<div class="container">
 						<div class="roww">
-
 							<!-- Main Title -->
 							<div class="resumo_fn_main_title">
 								<h3 class="subtitle">About Me</h3>
@@ -88,45 +77,28 @@
 								<p class="desc">I'm a Freelancer Front-end Developer with over 12 years of experience. I'm from San Francisco. I code and create web elements for amazing people around the world. I like work with new people. New people are new experiences.</p>
 							</div>
 							<!-- /Main Title -->
-
 							<!-- About Information -->
 							<div class="resumo_fn_about_info">
 								<div class="about_left">
 									<table>
 										<tr>
 											<th>Name</th>
-											<th>Bruce Wilson</th>
+											<th>AravindhSamy</th>
 										</tr>
 										<tr>
-											<th>Birthday</th>
-											<th>4th April 1990</th>
-										</tr>
-										<tr>
-											<th>Age</th>
-											<th>31 years</th>
-										</tr>
-										<tr>
-											<th>Address</th>
-											<th>San Francisco</th>
-										</tr>
-										<tr>
-											<th>Phone</th>
-											<th><a href="tel:+3846923442364">(+38) 469 2344 2364</a></th>
+											<th>Nationality</th>
+											<th>Indian</th>
 										</tr>
 										<tr>
 											<th>Email</th>
-											<th><a href="https://frenify.net/cdn-cgi/l/email-protection#630511060d0a051a1706020e23040e020a0f4d000c0e"><span class="__cf_email__" data-cfemail="016773646f6867787564606c41666c60686d2f626e6c">[email&#160;protected]</span></a></th>
-										</tr>
-										<tr>
-											<th>Skype</th>
-											<th><a href="skype:brucewilson.90">brucewilson.90</a></th>
+											<th>aravindhsam0@gmail.com</th>
 										</tr>
 									</table>
 								</div>
 								<div class="about_right">
 									<!-- Download CV Button -->
 									<div class="resumo_fn_cv_btn">
-										<a href="img/cv.jpg" download>
+										<a href="pdf/Aravindhsamy-Resume.jpg" download>
 											<span class="icon">
 												<img src="svg/inbox.svg" alt="" class="fn__svg" />
 												<img src="svg/arrow.svg" alt="" class="fn__svg arrow" />
@@ -138,11 +110,8 @@
 								</div>
 							</div>
 							<!-- /About Information -->
-
-
 							<!-- Tabs Shortcode -->
 							<div class="resumo_fn_tabs">
-
 								<!-- Tab: Header -->
 								<div class="tab_header">
 									<ul>
@@ -165,89 +134,62 @@
 												<li>
 													<div class="item">
 														<div class="item_top">
-															<h5>Frenify  LLC</h5>
-															<span>( 2018 — Today )</span>
+															<h5>Azsa Tech</h5>
+															<span>( 2022 )</span>
 														</div>
-														<h3>Sr. Front-end Engineer</h3>
+														<h3>Back-end Engineer</h3>
 														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 													</div>
 												</li>
 												<li>
 													<div class="item">
 														<div class="item_top">
-															<h5>Google  LLC</h5>
-															<span>( 2016 — 2018 )</span>
+															<h5>SS Soft Solutions</h5>
+															<span>( 2019 — 2020 )</span>
 														</div>
-														<h3>Front-end Developer</h3>
-														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-													</div>
-												</li>
-												<li>
-													<div class="item">
-														<div class="item_top">
-															<h5>Twitter  LLC</h5>
-															<span>( 2016 — 2011 )</span>
-														</div>
-														<h3>Graphic Designer</h3>
+														<h3>Digital Marketing Assistant</h3>
 														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 													</div>
 												</li>
 											</ul>
 										</div>
 										<!-- /Boxed List -->
-
 									</div>
 									<!-- /#1 tab content -->
-
 									<!-- #2 tab content -->
 									<div id="tab2" class="tab_item">
-
 										<!-- Boxed List -->
 										<div class="resumo_fn_boxed_list">
 											<ul>
 												<li>
 													<div class="item">
 														<div class="item_top">
-															<h5>Frenify University</h5>
-															<span>( 2014 — 2017 )</span>
-														</div>
-														<h3>Computer Science</h3>
-														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-													</div>
-												</li>
-												<li>
-													<div class="item">
-														<div class="item_top">
-															<h5>Edu University</h5>
-															<span>( 2011 — 2014 )</span>
-														</div>
-														<h3>Master Degree</h3>
-														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-													</div>
-												</li>
-												<li>
-													<div class="item">
-														<div class="item_top">
-															<h5>Clolumbia College</h5>
-															<span>( 2007 — 2011 )</span>
+															<h5>Indra Ganesan College of Engineering</h5>
+															<span>( 2018 — 2022 )</span>
 														</div>
 														<h3>Bachelor Degree</h3>
+														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+													</div>
+												</li>
+												<li>
+													<div class="item">
+														<div class="item_top">
+															<h5>Bishop Heber Hr Sec School</h5>
+															<span>( 2015 — 2018 )</span>
+														</div>
+														<h3>HSLC & SSLC</h3>
 														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 													</div>
 												</li>
 											</ul>
 										</div>
 										<!-- /Boxed List -->
-
 									</div>
 									<!-- /#2 tab content -->
-
 									<!-- #3 tab content -->
 									<div id="tab3" class="tab_item">
-
 										<!-- Progress Bar -->
 										<div class="resumo_fn_progress_bar">
-
 											<div class="progress_item" data-value="92">
 												<div class="item_in">
 													<h3 class="progress_title">Adobe Photoshop</h3>
@@ -255,7 +197,6 @@
 													<div class="bg_wrap"><div class="progress_bg"></div></div>
 												</div>
 											</div>
-
 											<div class="progress_item" data-value="95">
 												<div class="item_in">
 													<h3 class="progress_title">HTML5 &amp; CSS3</h3>
