--- a/index.html
+++ b/index.html
@@ -236,18 +236,14 @@
 								<!-- /Tab: Content -->
 							</div>
 							<!-- /Tabs Shortcode -->
-
-
 						</div>
 					</div>
 				</section>
 				<!-- /About Section -->
-
 				<!-- Services Section -->
 				<section id="services">
 					<div class="container">
 						<div class="roww">
-
 							<!-- Main Title -->
 							<div class="resumo_fn_main_title">
 								<h3 class="subtitle">Services</h3>
@@ -255,8 +251,6 @@
 								<p class="desc">I help ambitious businesses like yours generate more profits by building awareness, driving web traffic, connecting with customers and growing overall sales.</p>
 							</div>
 							<!-- /Main Title -->
-
-
 							<!-- Services List -->
 							<div class="resumo_fn_service_list">
 								<ul>
@@ -299,17 +293,14 @@
 								</ul>
 							</div>
 							<!-- /Services List -->
-
 						</div>
 					</div>
 				</section>
 				<!-- /Services Section -->
-
 				<!-- Contact Section -->
 				<section id="contact">
 					<div class="container">
 						<div class="roww resumo_fn_contact">
-
 							<!-- Main Title -->
 							<div class="resumo_fn_main_title">
 								<h3 class="subtitle">Contact</h3>
@@ -372,17 +363,17 @@
 								<span class="title_in">Aravindh samy</span>
 								<span class="title_in">Web Developer</span>
 								<span class="title_in">Freelancer</span>
-								<span class="title_in">Photographer</span>
+								<span class="title_in">Software Developer</span>
 							</span>
 						</h3>
 					</div>
 				</div>
-				<!-- <div class="right_bottom">
+				<div class="right_bottom">
 					<a href="#contact">
 						<span class="circle"></span>
-						<span class="text">I’m available for a freelance job. Hire me</span>
+						<span class="text">I’m available for a job. Hire me</span>
 					</a>
-				</div> -->
+				</div>
 			</div>
 			<!-- /Panel Content -->
 		</div>
@@ -392,10 +383,8 @@
 	<a href="#" class="resumo_fn_nav_overlay"></a>
 	<div class="resumo_fn_navigation">
 		<a href="#" class="closer"></a>
-
 		<!-- Navigation Content -->
 		<div class="nav_in">
-
 			<nav id="nav">
 				<h3 class="label">Menu</h3>
 				<ul>
@@ -420,25 +409,19 @@
 					<a href="https://aravindhsamy.github.io/" target="_blank">Developed by aravindhsamy</a>
 				</div>
 			</div>
-
 		</div>
 		<!-- /Navigation Content -->
-
 	</div>
 	<!-- /Right Hidden Navigation -->
 	<div class="frenify-cursor cursor-outer" data-default="yes" data-link="yes" data-slider="yes"><span class="fn-cursor"></span></div>
 	<div class="frenify-cursor cursor-inner" data-default="yes" data-link="yes" data-slider="yes"><span class="fn-cursor"><span class="fn-left"></span><span class="fn-right"></span></span></div>
-
 </div>
 <!-- /Wrapper All -->
-
 <!-- Scripts -->
-<script data-cfasync="false" src="../../../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/jquery7dd3.js?ver=4"></script>
 <script src="js/typed7dd3.js?ver=4"></script>
 <script src="js/owl-carousel7dd3.js?ver=4"></script>
 <script src="js/waypoints7dd3.js?ver=4"></script>
 <script src="js/nicescroll7dd3.js?ver=4"></script>
-<!--[if lt IE 10]> <script src="js/ie8.js?ver=4"></script> <![endif]-->
 <script src="js/init7dd3.js?ver=4"></script>
 <!-- /Scripts -->
 </body>
