--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<div class="resumo_fn_main_title">
 								<h3 class="subtitle">Introduction</h3>
 								<h3 class="title">Computer Engineer</h3>
-								<p class="desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern websites, web services and online stores.</p>
+								<p class="desc">I am passionate about my work. Because I love what I do, I have a steady source of motivation that drives me to do my best. In my last job, this passion led me to challenge myself daily and learn new skills that helped me to do better work.</p>
 								<img src="img/signature.png" alt="">
 							</div>
 							<!-- /Main Title -->
@@ -138,7 +138,7 @@
 															<span>( 2022 )</span>
 														</div>
 														<h3>Back-end Engineer</h3>
-														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+														<p>Good experience in developing web applications implementing model view template architecture using Django python web application framework.</p>
 													</div>
 												</li>
 												<li>
@@ -148,7 +148,9 @@
 															<span>( 2019 — 2020 )</span>
 														</div>
 														<h3>Digital Marketing Assistant</h3>
-														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+														<p>managing and executing successful marketing campaigns across multiple channels, including online, offline, and mobile. I have a proven track record of increasing website traffic and conversions by more than 25% through SEO/SEM, social media, email marketing, and content strategy.
+															<!-- Looking forward to joining a tech startup like Steadily, where I can accelerate the growth of the company through a decade-plus of experience and mentorship of junior digital marketers.  -->
+														</p>
 													</div>
 												</li>
 											</ul>
@@ -168,7 +170,7 @@
 															<span>( 2018 — 2022 )</span>
 														</div>
 														<h3>Bachelor Degree</h3>
-														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+														<p>7.80 CGPA. </p>
 													</div>
 												</li>
 												<li>
@@ -178,8 +180,7 @@
 															<span>( 2015 — 2018 )</span>
 														</div>
 														<h3>HSLC & SSLC</h3>
-														<p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-													</div>
+														</div>
 												</li>
 											</ul>
 										</div>
@@ -190,16 +191,24 @@
 									<div id="tab3" class="tab_item">
 										<!-- Progress Bar -->
 										<div class="resumo_fn_progress_bar">
-											<div class="progress_item" data-value="92">
+											<div class="progress_item" data-value="80">
 												<div class="item_in">
-													<h3 class="progress_title">Adobe Photoshop</h3>
+													<h3 class="progress_title">Python</h3>
 													<span class="progress_percent"></span>
 													<div class="bg_wrap"><div class="progress_bg"></div></div>
 												</div>
 											</div>
-											<div class="progress_item" data-value="95">
+											<div class="progress_item" data-value="75">
 												<div class="item_in">
-													<h3 class="progress_title">HTML5 &amp; CSS3</h3>
+													<h3 class="progress_title">Django</h3>
+													<span class="progress_percent"></span>
+													<div class="bg_wrap"><div class="progress_bg"></div></div>
+												</div>
+											</div>
+
+											<div class="progress_item" data-value="75">
+												<div class="item_in">
+													<h3 class="progress_title">Digital Marketing</h3>
 													<span class="progress_percent"></span>
 													<div class="bg_wrap"><div class="progress_bg"></div></div>
 												</div>
@@ -207,23 +216,13 @@
 
 											<div class="progress_item" data-value="80">
 												<div class="item_in">
-													<h3 class="progress_title">WordPress</h3>
+													<h3 class="progress_title">Selenium</h3>
 													<span class="progress_percent"></span>
 													<div class="bg_wrap"><div class="progress_bg"></div></div>
 												</div>
 											</div>
-
-											<div class="progress_item" data-value="85">
-												<div class="item_in">
-													<h3 class="progress_title">Adobe Illustrator</h3>
-													<span class="progress_percent"></span>
-													<div class="bg_wrap"><div class="progress_bg"></div></div>
-												</div>
-											</div>
-
 										</div>
 										<!-- /Progress Bar -->
-
 										<!-- Description -->
 										<div class="resumo_fn_desc">
 											<p>A freelance creative designer with a love for minimal design, clean typography and well-written code, located in San Francisco. Provide high quality and cost effective offshore web and software development services. Wide range of web and software development services across the world.</p>
@@ -361,8 +360,8 @@
 						<h3>
 							<span class="animated_title">
 								<span class="title_in">Aravindh samy</span>
-								<span class="title_in">Web Developer</span>
-								<span class="title_in">Freelancer</span>
+								<span class="title_in">Self Learner</span>
+								<span class="title_in">Python Developer</span>
 								<span class="title_in">Software Developer</span>
 							</span>
 						</h3>
