--- a/index.html
+++ b/index.html
@@ -121,13 +121,10 @@
 									</ul>
 								</div>
 								<!-- /Tab: Header -->
-
 								<!-- Tab: Content -->
 								<div class="tab_content">
-
 									<!-- #1 tab content -->
 									<div id="tab1" class="tab_item active">
-
 										<!-- Boxed List -->
 										<div class="resumo_fn_boxed_list">
 											<ul>
@@ -227,10 +224,8 @@
 										<div class="resumo_fn_desc">
 											<p>A freelance creative designer with a love for minimal design, clean typography and well-written code, located in San Francisco. Provide high quality and cost effective offshore web and software development services. Wide range of web and software development services across the world.</p>
 										</div>
-
 									</div>
 									<!-- /#2 tab content -->
-
 								</div>
 								<!-- /Tab: Content -->
 							</div>
@@ -256,36 +251,16 @@
 									<li>
 										<div class="item">
 											<div class="item_left">
-												<h3>Brand Consultant</h3>
-												<p>I build brands through cultural insights &amp; strategic vision. Custom crafted business solutions.</p>
-											</div>
-											<div class="item_right">
-												<p>Starts from</p>
-												<h3>$599</h3>
+												<h3>Digital Marketing</h3>
+												<p>Custom marketing solutions. Get your business on the next level.</p>
 											</div>
 										</div>
 									</li>
 									<li>
 										<div class="item">
 											<div class="item_left">
-												<h3>Global Marketing</h3>
-												<p>Custom marketing solutions. Get your business on the next level. We provide worldwide marketing.</p>
-											</div>
-											<div class="item_right">
-												<p>Starts from</p>
-												<h3>$399</h3>
-											</div>
-										</div>
-									</li>
-									<li>
-										<div class="item">
-											<div class="item_left">
-												<h3>UI/UX Solutions</h3>
-												<p>Design direction for business. Get your business on the next level. We help to create great experiences.</p>
-											</div>
-											<div class="item_right">
-												<p>Starts from</p>
-												<h3>$499</h3>
+												<h3>Web Application</h3>
+												<p>create websites. While my primary role is to ensure the website is visually appealing and easy to navigate, i'm also responsible for the website’s performance and capacity. </p>
 											</div>
 										</div>
 									</li>
