--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 							<!-- Main Title -->
 							<div class="resumo_fn_main_title">
 								<h3 class="subtitle">About Me</h3>
-								<h3 class="title">Biography</h3>
-								<p class="desc">I'm a Freelancer Front-end Developer with over 12 years of experience. I'm from San Francisco. I code and create web elements for amazing people around the world. I like work with new people. New people are new experiences.</p>
+								<!-- <h3 class="title">Biography</h3> -->
+								<p class="desc">I'm a Back-end Developer, I'm from India. I code and create web elements for amazing people around the world. I like work with new people. New people are new experiences.</p>
 							</div>
 							<!-- /Main Title -->
 							<!-- About Information -->
@@ -98,12 +98,12 @@
 								<div class="about_right">
 									<!-- Download CV Button -->
 									<div class="resumo_fn_cv_btn">
-										<a href="pdf/Aravindhsamy-Resume.jpg" download>
+										<a href="pdf/Aravindhsamy-Resume.pdf" download>
 											<span class="icon">
 												<img src="svg/inbox.svg" alt="" class="fn__svg" />
 												<img src="svg/arrow.svg" alt="" class="fn__svg arrow" />
 											</span>
-											<span>Download CV</span>
+											<span>Download Resume</span>
 										</a>
 									</div>
 									<!-- /Download CV Button -->
