--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<!-- MOBILE MENU -->
 		<div class="tokyo_tm_topbar">
 			<div class="topbar_inner">
-				<div class="logo" data-type="image"> <!-- You can use image or text as logo. data-type values are "image" and "text" -->
+				<div class="logo" data-type="image">
 					<a href="#">
 						<img src="img/logo/logo.png" alt="" />
 						<h3>ARAVINDHSAMY</h3>
@@ -66,7 +66,7 @@
 		<!-- LEFTPART -->
 		<div class="leftpart">
 			<div class="leftpart_inner">
-				<div class="logo" data-type="image"> <!-- You can use image or text as logo. data-type values are: "image" and "text" -->
+				<div class="logo" data-type="image">
 					<a href="#">
 						<img src="img/logo/logo.png" alt="" />
 						<h3>ARAVINDHSAMY</h3>
@@ -96,7 +96,7 @@
 					<div class="container">
 						<div class="tokyo_tm_home">
 							<div class="home_content">
-								<div class="avatar" data-type="wave"> <!-- data-type values are: "wave", "circle", "square"-->
+								<div class="avatar" data-type="wave">
 									<div class="image" data-img-url="img/slider/1.jpg"></div>
 								</div>
 								<div class="details">
