--- a/index.html
+++ b/index.html
@@ -96,19 +96,13 @@
 					<div class="container">
 						<div class="tokyo_tm_home">
 							<div class="home_content">
-								<div class="avatar" data-type="wave">
-									<div class="image" data-img-url="img/slider/1.jpg"></div>
-								</div>
 								<div class="details">
 									<h3 class="name">Aravindh <span>Samy</span></h3>
 									<p class="job">I am a Software Developer at heart and create features that are best suited for the job at hand.</p>
 									<div class="social">
 										<ul>
-											<li><a href="#"><i class="icon-facebook-squared"></i></a></li>
-											<li><a href="#"><i class="icon-twitter-squared"></i></a></li>
-											<li><a href="#"><i class="icon-behance-squared"></i></a></li>
-											<li><a href="#"><i class="icon-linkedin-squared"></i></a></li>
-											<li><a href="#"><i class="icon-instagram-"></i></a></li>
+											<li><a href="https://www.linkedin.com/in/aravindhsamy-p/"><i class="icon-linkedin-squared"></i></a></li>
+
 										</ul>
 									</div>
 								</div>
@@ -130,23 +124,20 @@
 									</div>
 								</div>
 							</div>
-							<div class="top_author_image">
-								<img src="img/slider/1.jpg" alt="" />
-							</div>
 							<div class="about_title">
-								<h3>Adriano Smith</h3>
-								<span>Web Developer</span>
+								<h3>Aravindh Samy</h3>
+								<span>Software Developer</span>
 							</div>
 							<div class="about_text">
-								<p>Hi, my name is Adriano Smith and I began using WordPress when it first began. I’ve spent most of my waking hours for the last ten years designing, programming and operating WordPress sites.</p>
+								<p>Hi, my name is Aravindhsamy  and I began using web development when it first began. I’ve spent most of my waking hours for the last ten years designing, programming and operating Software projects.</p>
 								<p>One of my specialties is taking an idea from scratch and creating a full-fledged platform. I go beyond to produce sites with a unique, outstanding, contemporary look-and-feel. With extensive knowledge of web mechanics, I’m able to optimize complex integrations to require little-to-no maintenance while running on their own for years.</p>
 							</div>
 							<div class="tokyo_tm_short_info">
 								<div class="left">
 									<div class="tokyo_tm_info">
 										<ul>
-											<li><span>Email:</span><span><a href="mailto:tokyo@gmail.com">tokyo@gmail.com</a></span></li>
-											<li><span>Phone:</span><span><a href="tel:+77 022 177 05 05">+77 022 177 05 05</a></span></li>
+											<li><span>Email:</span><span><a href="mailto:aravindhoxford@gmail.com">aravindhoxford@gmail.com</a></span></li>
+
 										</ul>
 									</div>
 								</div>
@@ -162,7 +153,7 @@
 								</div>
 							</div>
 							<div class="tokyo_tm_button" data-position="left">
-								<a href="img/cv/1.jpg" download>
+								<a href="img/cv/1.pdf" download>
 									<span>Download CV</span>
 								</a>
 							</div>
@@ -173,19 +164,19 @@
 							<div class="in">
 								<div class="left">
 									<div class="tokyo_section_title">
-										<h3>Programming Skills</h3>
+										<h3> Skills</h3>
 									</div>
 									<div class="tokyo_progress">
 										<div class="progress_inner" data-value="95">
-											<span><span class="label">WordPress</span><span class="number">95%</span></span>
+											<span><span class="label">C ,Python</span><span class="number">95%</span></span>
 											<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 										</div>
 										<div class="progress_inner" data-value="80" >
-											<span><span class="label">JavaScript</span><span class="number">80%</span></span>
+											<span><span class="label">Data Analytics</span><span class="number">80%</span></span>
 											<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 										</div>
 										<div class="progress_inner" data-value="90">
-											<span><span class="label">Angular</span><span class="number">90%</span></span>
+											<span><span class="label">MERN</span><span class="number">90%</span></span>
 											<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 										</div>
 									</div>
@@ -204,7 +195,7 @@
 											<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 										</div>
 										<div class="progress_inner" data-value="85">
-											<span><span class="label">Arabic</span><span class="number">85%</span></span>
+											<span><span class="label">Spanish</span><span class="number">85%</span></span>
 											<div class="background"><div class="bar"><div class="bar_in"></div></div></div>
 										</div>
 									</div>
@@ -222,19 +213,16 @@
 									<div class="tokyo_tm_skill_list">
 										<ul>
 											<li>
-												<span><img class="svg" src="img/svg/rightarrow.svg" alt="" />Bootstrap, Angular</span>
+												<span><img class="svg" src="img/svg/rightarrow.svg" alt="" />Bootstrap, React</span>
 											</li>
 											<li>
-												<span><img class="svg" src="img/svg/rightarrow.svg" alt="" />React, Vue, Laravel</span>
+												<span><img class="svg" src="img/svg/rightarrow.svg" alt="" />PowerBI , Hadoop , ETL</span>
 											</li>
 											<li>
-												<span><img class="svg" src="img/svg/rightarrow.svg" alt="" />Stylus, Sass, Less</span>
+												<span><img class="svg" src="img/svg/rightarrow.svg" alt="" />Linux , RestApis</span>
 											</li>
 											<li>
-												<span><img class="svg" src="img/svg/rightarrow.svg" alt="" />Gulp, Webpack, Grunt</span>
-											</li>
-											<li>
-												<span><img class="svg" src="img/svg/rightarrow.svg" alt="" />Tweenmax, GSAP</span>
+												<span><img class="svg" src="img/svg/rightarrow.svg" alt="" />MySql , MongoDB </span>
 											</li>
 										</ul>
 									</div>
@@ -278,10 +266,10 @@
 											<li>
 												<div class="list_inner">
 													<div class="time">
-														<span>2014 - 2016</span>
+														<span>2024 - 2025</span>
 													</div>
 													<div class="place">
-														<h3>Oxford Univercity</h3>
+														<h3>College Of Engineering,Guindy</h3>
 														<span>Master Degree</span>
 													</div>
 												</div>
@@ -289,22 +277,11 @@
 											<li>
 												<div class="list_inner">
 													<div class="time">
-														<span>2010 - 2014</span>
+														<span>2018 - 2022</span>
 													</div>
 													<div class="place">
-														<h3>Texas Univercity</h3>
+														<h3>Indra Ganesan College Of Engg</h3>
 														<span>Bachelor Degree</span>
-													</div>
-												</div>
-											</li>
-											<li>
-												<div class="list_inner">
-													<div class="time">
-														<span>2008 - 2010</span>
-													</div>
-													<div class="place">
-														<h3>Simone College</h3>
-														<span>Associate Degree</span>
 													</div>
 												</div>
 											</li>
@@ -312,46 +289,7 @@
 									</div>
 								</div>
 								<div class="right">
-									<div class="tokyo_section_title">
-										<h3>Experience</h3>
-									</div>
-									<div class="tokyo_tm_resume_list">
-										<ul>
-											<li>
-												<div class="list_inner">
-													<div class="time">
-														<span>2018 - Now</span>
-													</div>
-													<div class="place">
-														<h3>Envato Market</h3>
-														<span>Exclusive Author</span>
-													</div>
-												</div>
-											</li>
-											<li>
-												<div class="list_inner">
-													<div class="time">
-														<span>2016 - 2018</span>
-													</div>
-													<div class="place">
-														<h3>RGB Studio</h3>
-														<span>UX Designer</span>
-													</div>
-												</div>
-											</li>
-											<li>
-												<div class="list_inner">
-													<div class="time">
-														<span>2012 - 2016</span>
-													</div>
-													<div class="place">
-														<h3>Innovations Park</h3>
-														<span>Web Designer</span>
-													</div>
-												</div>
-											</li>
-										</ul>
-									</div>
+
 								</div>
 							</div>
 						</div>
@@ -536,19 +474,19 @@
 								<ul>
 									<li>
 										<div class="list_inner">
-											<h3>777+</h3>
+											<h3>10</h3>
 											<span>Projects Completed</span>
 										</div>
 									</li>
 									<li>
 										<div class="list_inner">
-											<h3>3K</h3>
+											<h3>20</h3>
 											<span>Happy Clients</span>
 										</div>
 									</li>
 									<li>
 										<div class="list_inner">
-											<h3>9K+</h3>
+											<h3>10K+</h3>
 											<span>Lines of Code</span>
 										</div>
 									</li>
